# AtomsPlotter

./: README.md  minimal_example.py  plot_atoms.ipynb  pyproject.toml
.github/workflows/: python-app.yml  release.yml  testpypi.yml
src/AtomsPlotter/: atoms_plotter.py  main.py
src/atoms_plotter/: atoms_plotter.py  main.py  utils.py
